# dynamodx

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
dynamodx/: conditions.py  expressions.py  transact_writer.py  types.py
tests/: conftest.py  seeds.jsonl  test_conditions.py  test_expressions.py  test_transact_writer.py
