[project]
name = "dynamodx"
version = "0.1.0"
description = "Developer-friendly library for DynamoDB with single-table design, without ORM lock-in."
readme = "README.md"
authors = [
    { name = "Sérgio Rafael Siqueira", email = "osergiosiqueira@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.39",
    "jmespath>=1.1.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.39",
    "jsonlines>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
addopts = "--cov=dynamodx --cov-report html"

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
